--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,4 +4,8 @@ runmode = dev
 TemplateLeft = {{{
 TemplateRight = }}}
 marathonUrl = http://10.68.10.200:8080,10.68.10.201:8080
-
+rbac_node_table = auth_node
+rbac_role_table = auth_role
+rbac_user_table = auth_user
+rbac_admin_user = youxianqin
+user_auth_type = 1
