--- a/conf/app.conf
+++ b/conf/app.conf
@@ -9,3 +9,5 @@ rbac_role_table = auth_role
 rbac_user_table = auth_user
 rbac_admin_user = youxianqin
 user_auth_type = 1
+sessionon = true
+rbac_auth_gateway = /
