--- a/conf/app.conf
+++ b/conf/app.conf
@@ -10,4 +10,6 @@ rbac_user_table = auth_user
 rbac_admin_user = youxianqin
 user_auth_type = 1
 sessionon = true
-rbac_auth_gateway = /
+copyrequestbody = true
+rbac_auth_gateway = /api/auth/user
+rbac_auth_signup = /api/auth/sign
