--- a/conf/app.conf
+++ b/conf/app.conf
@@ -11,5 +11,14 @@ rbac_admin_user = youxianqin
 user_auth_type = 1
 sessionon = true
 copyrequestbody = true
-rbac_auth_gateway = /api/auth/user
+rbac_auth_gateway = /api/auth/sign
 rbac_auth_signup = /api/auth/sign
+
+dockermgr_idc_table=docker_idc_conf
+dockermgr_ip_table=docker_ip_pool
+dockermgr_cidr_table=docker_cidr
+dockermgr_mgrconf_table=docker_mgr_conf
+dockermgr_marathonconf_table=docker_marathon_conf
+dockermgr_registryconf_table=docker_registry_conf
+dockermgr_release_table=docker_release
+dockermgr_service_table=docker_service
