--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,5 +1,5 @@
 appname = go-dockermgr
-httpport = 8080
+httpport = 8081
 runmode = dev
 TemplateLeft = {{{
 TemplateRight = }}}
@@ -12,7 +12,7 @@ user_auth_type = 1
 sessionon = true
 copyrequestbody = true
 rbac_auth_gateway = /api/auth/sign
-rbac_auth_signup = /api/auth/sign
+rbac_auth_signup = /api/auth/user
 
 dockermgr_idc_table=docker_idc_conf
 dockermgr_ip_table=docker_ip_pool
