--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,19 +1,23 @@
+###beego自身配置
 appname = go-dockermgr
 httpport = 8081
 runmode = dev
 TemplateLeft = {{{
 TemplateRight = }}}
-marathonUrl = http://10.68.10.200:8080,10.68.10.201:8080
-rbac_node_table = auth_node
-rbac_role_table = auth_role
-rbac_user_table = auth_user
-rbac_admin_user = youxianqin
-user_auth_type = 1
 sessionon = true
 copyrequestbody = true
+
+###App配置
+basemacstring=06:11
+rbac_admin_user = youxianqin
+user_auth_type = 1
 rbac_auth_gateway = /api/auth/sign
 rbac_auth_signup = /api/auth/user
+rbac_auth_defaultpasswd = 123456
+service_separator = -
+service_separate_count = 2
 
+## 数据库table表名配置
 dockermgr_idc_table=docker_idc_conf
 dockermgr_ip_table=docker_ip_pool
 dockermgr_cidr_table=docker_cidr
@@ -22,3 +26,7 @@ dockermgr_marathonconf_table=docker_marathon_conf
 dockermgr_registryconf_table=docker_registry_conf
 dockermgr_release_table=docker_release
 dockermgr_service_table=docker_service
+rbac_node_table = auth_node
+rbac_role_table = auth_role
+rbac_user_table = auth_user
+
