--- a/conf/app.conf
+++ b/conf/app.conf
@@ -14,8 +14,9 @@ user_auth_type = 1
 rbac_auth_gateway = /api/auth/sign
 rbac_auth_signup = /api/auth/user
 rbac_auth_defaultpasswd = 123456
-service_separator = -
 service_separate_count = 2
+cache_type = memory
+cache_config = {"interval":3600}
 
 ## 数据库table表名配置
 dockermgr_idc_table=docker_idc_conf
@@ -29,4 +30,4 @@ dockermgr_service_table=docker_service
 rbac_node_table = auth_node
 rbac_role_table = auth_role
 rbac_user_table = auth_user
-
+rbac_serviceauth_table = auth_serviceauth
