--- a/conf/app.conf
+++ b/conf/app.conf
@@ -31,3 +31,4 @@ rbac_node_table = auth_node
 rbac_role_table = auth_role
 rbac_user_table = auth_user
 rbac_serviceauth_table = auth_serviceauth
+rbac_serviceauthuser_table=auth_serviceauthuser
