--- a/conf/app.conf
+++ b/conf/app.conf
@@ -8,8 +8,8 @@ sessionon = true
 copyrequestbody = true
 
 ###App配置
-basemacstring=06:11
-rbac_admin_user = youxianqin
+basemacstring = 06:11
+rbac_admin_user = system
 user_auth_type = 1
 rbac_auth_gateway = /api/auth/sign
 rbac_auth_signup = /api/auth/user
