add README and update release

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -17,6 +17,8 @@ rbac_auth_defaultpasswd = 123456
 service_separate_count = 2
 cache_type = memory
 cache_config = {"interval":3600}
+task_channel_maxsize = 50
+routinepool_size = 5
 
 ## 数据库table表名配置
 dockermgr_idc_table=docker_idc_conf
