--- a/conf/app.conf
+++ b/conf/app.conf
@@ -29,6 +29,7 @@ dockermgr_marathonconf_table=docker_marathon_conf
 dockermgr_registryconf_table=docker_registry_conf
 dockermgr_release_table=docker_release
 dockermgr_releaseconf_table=docker_release_conf
+dockermgr_releaseconfidc_table=docker_release_conf_idc
 dockermgr_service_table=docker_service
 rbac_node_table = auth_node
 rbac_role_table = auth_role
